# Reconstructor

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  PC_from_tiff.cpp  PC_from_xml.cpp  PC_registration.cpp  PC_registration.cpp.autosave  PC_view_transfer.cpp
include/: PCbuilder.h  dataloader.h  registrator.h
src/: CMakeLists.txt  MyProject.files  PCbuilder.cpp  dataloader.cpp  registrator.cpp  test.cpp  test_tiff.cpp
