CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( Reconstructor )
SET( CMAKE_CXX_COMPILER "g++")
SET( CMAKE_CXX_STANDARD 17)
SET( CMAKE_BUILD_TYPE "Debug")

SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin) 
SET( LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/include)

# OpenCV
FIND_PACKAGE( OpenCV 3.4 )
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
# PCL
FIND_PACKAGE( PCL 1.9)
ADD_DEFINITIONS( ${PCL_DEFINITIONS} )
INCLUDE_DIRECTORIES( ${PCL_INCLUDE_DIRS}  )
LINK_LIBRARIES( ${PCL_LIBRARY_DIRS} )

SET( THIRD_PARTY_LIBRARIES ${OpenCV_LIBS} ${PCL_LIBRARIES})

add_subdirectory(./src/)
add_subdirectory(./examples/)
